--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CoreBase</title>
+    <title>AkkuCore</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                         <span class="navbar-toggler-bar"></span>
                         <span class="navbar-toggler-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="https://www.example.com">CoreBase.com</a>
+                    <a class="navbar-brand" href="">AkhileshDasari</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav ml-auto">
@@ -53,10 +53,6 @@
                                 <i class="fa fa-github"></i>
                                 <p class="hidden-lg-up">GitHub</p>
                             </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="https://www.example.com" target="_blank" class="btn btn-danger btn-round">Login</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -68,7 +64,7 @@
                 <div class="content-center">
                     <div class="container">
                         <div class="title-brand">
-                            <h1 class="presentation-title">SITE TITLE</h1>
+                            <h1 class="presentation-title">My Lost thing</h1>
                             <div class="fog-low">
                                 <img src="http://demos.creative-tim.com/paper-kit-2/assets/img/fog-low.png" alt="">
                             </div>
@@ -77,7 +73,11 @@
                             </div>
                         </div>
 
-                        <h2 class="presentation-subtitle text-center">Headline</h2>
+                        <h2 class="presentation-subtitle text-center">
+                            Thanks for scaning the lost item,
+                            This is Akhilesh Dasari,
+                            i hope you can return me this item.
+                        </h2>
                     </div>
                 </div>
                 <div class="moving-clouds"
