--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="content-center">
                     <div class="container">
                         <div class="title-brand">
-                            <h1 class="presentation-title">My Lost thing</h1>
+                            <h1 class="presentation-title">Contact Me</h1>
                             <div class="fog-low">
                                 <img src="http://demos.creative-tim.com/paper-kit-2/assets/img/fog-low.png" alt="">
                             </div>
